# testAB-tAB

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: defaults.yaml  fitted_priors.yaml
data/sample/: sample_50_tests.csv
devdocs/ai/: PLAN.md  RESULTS.md
notebooks/: upworthy_readouts.ipynb
outputs/results/: confirmatory_headline_features.csv  confirmatory_summary.json  confirmatory_tests.parquet  exploratory_arms.parquet  exploratory_headline_features.csv  exploratory_summary.json  exploratory_tests.parquet  holdout_arms.parquet  holdout_headline_features.csv  holdout_summary.json  holdout_tests.parquet  sample_arms.parquet  sample_headline_features.csv  sample_summary.json  sample_tests.parquet
src/abkit/: __init__.py  bayes.py  design.py  freq.py  health.py  multiplicity.py  readout.py  sequential.py  shrinkage.py
src/analysis/: __init__.py  batch_readouts.py  config.py  figstyle.py  fit_priors.py  ingest.py  make_sample.py  meta.py  paths.py  run_pipeline.py
src/dashboard/: __init__.py  app.py  data.py  server.py  theme.py  ui.py
src/dashboard/views/: corpus.py  design.py  readout.py  sequential_view.py
src/dashboard/web/: app.css  app.js  index.html
tests/: test_api.py  test_bayes.py  test_design.py  test_freq.py  test_health.py  test_ingest.py  test_multiplicity.py  test_readout.py  test_sequential.py  test_shrinkage.py
